--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@sentry/nextjs": "^8.18.0",
     "@tanstack/react-table": "^8.19.3",
     "appwrite": "^15.0.0",
+    "axios": "^1.7.3",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "input-otp": "^1.2.4",
@@ -40,6 +42,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
